# orchestra

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  generate.py  ip_enrichment.md  note.txt  orchestra.py  pyproject.toml
.agents/: AGENT.md
.agents/plans/: PLAN_v1.md
.agents/specs/: SPEC_v1.md  SPEC_v2.md
.github/workflows/: test.yml
actions/: README.md  __init__.py  action_index.json  actions_index.json  ai.py  secrets_helper.py  slack.py  virustotal.py  webhook.py
actions/integrations/: integration_index.json  slack_integration.py  virustotal_integration.py
cli/: README.md  compose_cli.py  index_cli.py  init_cli.py  jobs_cli.py  musician_cli.py  playbook_cli.py  schedule_cli.py  scheduler_cli.py  secrets_cli.py  server_cli.py
composer_agent/: README.md  compose_action.md  compose_integration.md  composer.md  composer.py
composer_agent/composer_tasks/: compose_action.md  compose_action.py  compose_integration.md  compose_integration.py  composer_helpers.py  review.py  review_prompt.md
conductor/: conductor.py
conductor/conductor_tasks/: failed_jobs.py  musician.py  scheduler.py  secrets.py  webhook.py
conductor_agent/: README.md  conductor.py
conductor_agent/conductor_tasks/: __init__.py  action_index.py  config.py  index.py  init.py  llm.py  musician.py  playbook.py  schedule_cli.py  scheduler.py  secrets.py  secrets_cli.py  webhook.py
conductor_agent/init_assets/: docker-compose.yml  nginx.conf
conductor_agent/init_assets/.local_config/: orchestra.json
conductor_agent/init_assets/musicsheets/: ip_enrichment.py
conductor_agent/init_assets/playbooks/: ip_enrichment.md  template.md
docs/: cli-guide.md  deployment.md  deployment_guide.md  developer_guide.md
orchestra_core/: README.md  __init__.py  config.py  dedupe.py  exceptions.py  index.py  llm.py  logging.py  playbook_state.py  redis.py  secrets.py  validators.py
orchestra_core/init_assets/: .env.example  docker-compose.yml  nginx.conf
orchestra_core/init_assets/.local_config/: orchestra.json
orchestra_core/init_assets/playbooks/: ip_enrichment.md
tests/: test_ai_actions.py  test_composer_helpers.py  test_config.py  test_dedupe.py  test_failed_jobs.py  test_index.py  test_integration_smoke.py  test_jobs_cli.py  test_logging.py  test_musician.py  test_playbook_cli.py  test_playbook_state.py  test_redis.py  test_secrets.py  test_webhook.py
