[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra"
version = "0.1.0"
description = "AI-assisted automation engine for playbook-driven Python workflows."
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "croniter",
  "fastapi",
  "redis",
  "uvicorn",
  "openai",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
gemini = ["google-generativeai"]

[project.scripts]
orchestra = "orchestra:main"

[tool.setuptools]
py-modules = ["orchestra"]

[tool.setuptools.packages.find]
include = ["orchestra_core*", "actions*", "composer_agent*", "conductor*", "cli*"]

[tool.setuptools.package-data]
actions = ["action_index.json"]
composer_agent = ["composer.md", "composer_tasks/compose_action.md", "composer_tasks/compose_integration.md"]
cli = ["review_prompt.md"]
orchestra_core = [
  "init_assets/.local_config/orchestra.json",
  "init_assets/.env.example",
  "init_assets/docker-compose.yml",
  "init_assets/nginx.conf",
  "init_assets/playbooks/*.md",
  "init_assets/musicsheets/*.py",
  "init_assets/musicsheets/local_actions/*",
  "init_assets/musicsheets/local_actions/local_integrations/*",
  "init_assets/logs/orchestra.log",
]
