[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra"
version = "0.1.0"
description = "AI-assisted automation engine for playbook-driven Python workflows."
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "croniter",
  "fastapi",
  "redis",
  "uvicorn",
  "openai",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
gemini = ["google-generativeai"]
test = [
  "pytest",
  "pytest-cov",
]
lint = [
  "ruff>=0.4.0",
  "black>=24.0.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
orchestra = "orchestra:main"

[tool.setuptools]
py-modules = ["orchestra"]

[tool.setuptools.packages.find]
include = ["orchestra_core*", "actions*", "composer_agent*", "conductor*", "cli*"]

[tool.setuptools.package-data]
actions = ["action_index.json", "integrations/integration_index.json"]
composer_agent = ["composer.md", "composer_tasks/compose_action.md", "composer_tasks/compose_integration.md", "composer_tasks/review_prompt.md"]
orchestra_core = [
  "init_assets/.local_config/orchestra.json",
  "init_assets/.env.example",
  "init_assets/docker-compose.yml",
  "init_assets/nginx.conf",
  "init_assets/playbooks/*.md",
  "init_assets/musicsheets/*.py",
  "init_assets/musicsheets/local_actions/*",
  "init_assets/musicsheets/local_actions/local_integrations/*",
  "init_assets/logs/orchestra.log",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: slower smoke tests that may require package install, Docker, or subprocess CLI execution",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "T20", # flake8-print (AGENTS.md compliance)
  "D",   # pydocstyle (AGENTS.md compliance)
]
ignore = [
  "D100",  # Missing docstring in public module (too noisy)
  "D104",  # Missing docstring in public package
  "D203",  # one-blank-line-before-class (conflicts with D211)
  "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # Don't require docstrings in tests
"cli/*" = ["T201"]  # Allow print() in CLI layer (AGENTS.md)
"orchestra.py" = ["T201"]  # Allow print() in router (AGENTS.md)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
